<resources>
    <string name="app_name">RBC Budgets</string>
    <string name="title_activity_create_budget">CreateBudgetActivity</string>

    <!-- Login Activity -->
    <string name="card_hint">Client Card Number</string>
    <string name="card_password">Password</string>
    <string name="login_rbc">RBC</string>
    <string name="login_app_name">Budgets</string>
    <string name="login_remember_me">Remember Me</string>
    <string name="login_submit">Submit</string>


    <!-- Create Budget Activity -->
    <string name="create_title">Create a Budget</string>

    <!-- Create Budget Step One Fragment -->
    <string name="step_one_line_one">I would like to save</string>
    <string name="step_one_amount_hint">Amount</string>
    <string name="step_one_choose_date">Choose Date</string>
    <array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Nov</item>
        <item>Dec</item>
    </array>

    <!-- Create Budget Step One Fragment -->
    <array name="step_two_categories">
        <item>Food</item>
        <item>Clothing</item>
        <item>Electronics</item>
        <item>Entertainment</item>
        <item>Other</item>
    </array>

    <!-- Items for food -->
    <array name="food_array">
        <item>Fast Food</item>
        <item>Alcohol</item>
        <item>Groceries</item>
        <item>Coffee</item>
    </array>

    <!-- Items for Clothing -->
    <array name="clothing_array">
        <item>Footwear</item>
        <item>Accessories</item>
        <item>Tops</item>
        <item>Bottoms</item>
    </array>

    <!-- Items for Electronics -->
    <array name="electronics_array">
        <item>Laptops</item>
        <item>Computer Accessories</item>
        <item>Computers</item>
        <item>Smart Phones</item>
        <item>Cameras</item>
        <item>Tablets</item>
    </array>

    <!-- Items for Entertainment -->
    <array name="entertainment_array">
        <item>Movies</item>
        <item>Video Games</item>
        <item>Netflix</item>
    </array>
</resources>
