<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <!-- Header -->
    <LinearLayout
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Logo -->
        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/rbc_login"/>

        <!-- Divider (i mean Davinder) -->
        <View
            android:background="@color/colorAccent"
            android:layout_width="4dp"
            android:layout_height="match_parent"/>

        <!-- App Name -->
        <LinearLayout
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:textStyle="bold"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:text="@string/login_rbc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:text="@string/login_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <!-- Card Number CardView -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:padding="3dp"
                android:layout_centerVertical="true"
                android:id="@+id/more_cards_button"
                android:layout_alignParentEnd="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_credit_card_black_24px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="number"
                android:id="@+id/login_client_card"
                android:hint="@string/card_hint"
                android:layout_width="match_parent"
                android:layout_toStartOf="@id/more_cards_button"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!-- Card Number Password -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:padding="3dp"
                android:layout_centerVertical="true"
                android:id="@+id/show_password_button"
                android:layout_alignParentEnd="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_visibility_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_toStartOf="@+id/show_password_button"
                android:inputType="textPassword"
                android:id="@+id/login_client_card_password"
                android:hint="@string/card_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!-- Remember Me Box -->
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:text="@string/login_remember_me"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>

        <CheckBox
            android:id="@+id/login_remember_checkbox"
            android:buttonTint="@color/colorAccent"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Submit Button -->
    <Button
        android:id="@+id/login_submit"
        android:padding="18dp"
        android:enabled="false"
        android:backgroundTint="@android:color/white"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        android:textAllCaps="true"
        android:text="@string/login_submit"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Progress Bar -->
    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progress_spinner"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_atop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
