<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.rbc.rbcbudgets.CreateBudgetStepOneFragment">

    <!-- Content -->
    <LinearLayout
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- First Line of Text -->
        <TextView
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@android:color/white"
            android:text="@string/step_one_line_one"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Amount + Amount input field -->
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_attach_money_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_marginStart="-16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/step_one_amount_input"
                android:textColorLink="@android:color/white"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textAlignment="center"
                android:hint="@string/step_one_amount_hint"
                android:inputType="numberDecimal"
                android:minEms="4"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Choose Date -->
        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textSize="26sp"
                android:textColor="@android:color/white"
                android:text="By"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/step_one_date_input"
                android:backgroundTint="@color/colorPrimaryDarker"
                android:textColor="@android:color/white"
                android:layout_marginStart="2dp"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/step_one_choose_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- For Entry -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textSize="26sp"
                android:textColor="@android:color/white"
                android:text="For"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_marginStart="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/step_one_for_input"
                android:textColorLink="@android:color/white"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textAlignment="center"
                android:hint="Goal"
                android:minEms="3"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Because -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textSize="26sp"
                android:textColor="@android:color/white"
                android:text="Because"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_marginStart="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/step_one_because_input"
                android:textColorLink="@android:color/white"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textAlignment="center"
                android:hint="Reason"
                android:singleLine="true"
                android:minEms="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
